--- a/map_social_inclusion.html
+++ b/map_social_inclusion.html
@@ -157,15 +157,15 @@ document.addEventListener('DOMContentLoaded', function() {
         var sectionWidth = legendWidth / 9;  // There are 9 color sections
 
         var colors = [
-            "#b3cde3",  // 50-54
-            "#a6bddb",  // 55-59
-            "#92acd8",  // 60-64
-            "#7b9dd1",  // 65-69
-            "#6292c2",  // 70-74
-            "#4677b5",  // 75-79
-            "#2a5ca8",  // 80-84
-            "#1d4a90",  // 85-89
-            "#08306b"   // 90+
+        "#2399B5",  // 50-54
+                "#208FAE",  // 55-59
+                "#1D86A8",  // 60-64
+                "#1A7CA1",  // 65-69
+                "#18729A",  // 70-74
+                "#156893",  // 75-79
+                "#125F8D",  // 80-84
+                "#0F5586",  // 85-89
+                "#0C4B7F"   // 90+
         ];
 
         colors.forEach((color, index) => {
@@ -196,15 +196,15 @@ document.addEventListener('DOMContentLoaded', function() {
         return d3.scaleThreshold()
             .domain([54, 59, 64, 69, 74, 79, 84, 89])  // Define breaks in the scale
             .range([
-                "#b3cde3",  // 50-54
-                "#a6bddb",  // 55-59
-                "#92acd8",  // 60-64
-                "#7b9dd1",  // 65-69
-                "#6292c2",  // 70-74
-                "#4677b5",  // 75-79
-                "#2a5ca8",  // 80-84
-                "#1d4a90",  // 85-89
-                "#08306b"   // 90+
+                "#2399B5",  // 50-54
+                "#208FAE",  // 55-59
+                "#1D86A8",  // 60-64
+                "#1A7CA1",  // 65-69
+                "#18729A",  // 70-74
+                "#156893",  // 75-79
+                "#125F8D",  // 80-84
+                "#0F5586",  // 85-89
+                "#0C4B7F"   // 90+
             ]);
     }
 
