--- a/index.html
+++ b/index.html
@@ -151,13 +151,12 @@ a:hover {
 
 #triangleChart {
     max-width: auto;
-    max-height: 80%; 
+    min-height: 100px;
+    max-height: 100%; 
     display: block;
-    /* max-height: 500px;   /* Example fixed height */
-    /* display: block; */
-    /* width: auto;         Maintains aspect ratio */
-    /* height: auto;       */
+
 }
+
 
 
 #hivPrevalence {
