--- a/index.html
+++ b/index.html
@@ -149,15 +149,6 @@ a:hover {
     margin-bottom: 15%;
 }
 
-#triangleChart {
-    display: block;
-    max-width: auto;
-    max-height: auto; 
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 10%;
-
-}
 
 
 #hivPrevalence {
@@ -473,6 +464,8 @@ section {
 
 
 
+
+
     </style>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -561,7 +554,7 @@ section {
              </div>
         <div class="column" id="column2">
         <h3>Gender identity and sexual orientation by age group</h3>
-        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="triangleChart.html" height="60%" width="100%"></iframe>
+        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="triangleChart.html" height="100%" width="100%" overflow="hidden"></iframe>
     </div>
     </div>
     </section>
