--- a/index.html
+++ b/index.html
@@ -592,6 +592,7 @@ section {
             <h3>Immigration and asylum status</h3>
             <p>Immigration and asylum experiences affect every aspect of quality of life. HIV prevalence among respondents born outside the U.S. is 4 to 5 times the survey mean (15%-18%) compared to 3-5% for those born in the US. Those born outside the US were also twice as likely to report abuse in relationships or the family, twice as likely to have reported environmental health concerns, and more likely to have experienced major health events (e.g., medical emergencies, surgeries, or major acute illness) but two-to-three times more likely to have not received services for major health events.
             </p>
+                        <h5><center>HIV Risk by Birthplace</center></h5>
             <canvas id="hivPrevalence"></canvas>
 
             </div>
