--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ a:hover {
 
 
 section {
-    margin-bottom: 5%;
+    margin-bottom: 10%;
     margin-top: 2%;
 }
 
@@ -695,7 +695,7 @@ section {
         To improve mental health outcomes, it is important to address social inclusion and specific community supports for individuals. This can mean social programming or community centers, but also through the affirmation of the LGBTQ+ community in health fairs, schools, libraries, parks, and other public places.
         <br><br>Click on the drop-down menu below to see the distribution of survey respondents by NYS region who answered 'Somewhat' or 'Major' in response to each question on social isolation and support. 
 <br><br>
-        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="map_social_inclusion.html" height="100%" width="100%" overflow="hidden"></iframe>
+        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="map_social_inclusion.html" height="100%" width="100%" overflow="display"></iframe>
 
                   </div>
 
@@ -714,7 +714,7 @@ section {
     <p>While there is a significant demand for services within the LGBTQ community, a large portion (62.6%) of respondents did not seek out the care or services they need. Among these, individuals under 35 represented over half who refrained from seeking support. Generally, the major barriers to accessing care include the high cost of services, their unavailability, and a shortage of LGBTQ-affirming options. Among those who did seek non-behavioral services but were unsuccessful, 31% attributed their failure to afford the services. Another 29% could not find the required services locally. Regarding mental health services, 47% of those who looked for but did not obtain these services cited the absence of such services in their area as the primary reason, with 40% unable to find LGBTQ+ affirming providers. Overall, 40% of all surveyed participants expressed distrust in the medical system.</p>
       <h4>Top barriers to care or service, by New York State region</h4>
 
-      <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="map_barriers.html" height="100%" width="100%" overflow="hidden"></iframe>
+      <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="map_barriers.html" height="100%" width="100%" overflow="display"></iframe>
 
 
         </div>
