--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ section {
                 <br>
 
                 <u>The Covid-19 pandemic exacerbated existing inequalities even further.</u> Most respondents rated obtaining mental health, in-home health, specialty services, substance use services, and dental care more difficult to obtain during the pandemic. 52% of non-White respondents noting difficulty accessing transition care during the COVID-19 pandemic as compared with 43% of White respondents. Overall, non-White respondents reported higher levels of difficulties in obtaining services than White respondents in most service areas.
-                <br><br><b>Hover over the chart to see the breakdown of those who reported increased difficulty in obtaining services during Covid-19, by race and service type:</b></p>
+                <br><br><b>Click on the chart to see the breakdown of those who reported increased difficulty in obtaining services during Covid-19, by race and service type:</b></p>
                 
                   
                   <div id="myChartLegend" class="chart-legend">
