--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@ section {
 
 
         <h4>Top barriers to care or service, by NYS region</h4>
-        <iframe id="igraph" scrolling="no" style="border:none; margin-bottom: 0; width: 100%; height: 100%; overflow: hidden;" seamless="seamless" src="map_barriers.html"></iframe>
+        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="map_barriers.html" height="100%" width="100%" overflow="display"></iframe>
 
 
         </div>
