--- a/index.html
+++ b/index.html
@@ -126,6 +126,20 @@ canvas {
     #igraph {
         height: 500px; /* Adjust based on your needs */
     }
+
+    .item {
+        padding: 10px;  /* Adjust this value as needed */
+        box-sizing: border-box; /* Ensures padding is included in the width calculation */
+    }
+
+    .circle {
+        margin-right: 0.5em;  /* Reduced margin for smaller screens */
+    }
+    .text {
+        font-size: 14px;  /* Smaller font size for mobile devices */
+    }
+
+
 }
 
 
@@ -777,7 +791,7 @@ section {
                <ul class="grid" style="list-style-type: none;"> 
        
                    <li class="item">
-                       <span class="circle largest" style="background-color: #0C4B7F; margin-right: 1em">
+                       <span class="circle largest" style="background-color: #0C4B7F; margin-right: 1em;">
                            <span>54%</span>
                        </span>
                        <span class="text">Lack of public information about LGBTQ+ competence medical or service providers in my area </span>
